--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-youtube": "^10.1.0",
     "styled-components": "^6.1.19",
