--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@barba/core": "^2.10.3",
     "@react-three/drei": "^10.4.2",
     "@react-three/fiber": "^9.2.0",
+    "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.10",
     "animejs": "^4.0.2",
     "barba.js": "^1.0.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
     "gsap": "^3.13.0",
+    "motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-youtube": "^10.1.0",
     "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0"
   },
